test/cases/compile_errors/@breakpoint_comptime_call.zig
export fn entry() void {
    comptime @breakpoint();
}

// error
//
// :2:14: error: encountered @breakpoint at comptime
